--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -227,7 +227,7 @@
 
 	const update = async () => {
 		const obj_data = get_text_area_content();
-		const data = await post_update(update_domain+diary_data[selected_index].id, 'PUT', obj_data, csrftoken);
+		const data = await post_update(`${update_domain}/${diary_data[selected_index].id}`, 'PUT', obj_data, csrftoken);
 
 
 		// replace the updated content
