refactored the diary_list html
i moved all the code for the diary list to its own file named diary.js

--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -11,7 +11,7 @@
 	<h3>Hard Wood Laminate</h3>
 	<div id="list">
 		<label for="interval">Interval:</label>
-		<select id="interval" onchange="updateTableOnIntervalChange(this)">
+		<select id="interval">
 			<option value=7>1 Week</option>
 		    <option value=93>3 Months</option>
 		    <option value=186>6 Month</option>
@@ -19,16 +19,16 @@
 		    <option value=744>2 Years</option>
 		    <option value=1116>3 Years</option>
 		</select>
-		<button onclick="displayUpdateCreate(this)" class="btn btn-success">new entry</button>
+		<button class="btn btn-success" id="new-entry-btn">new entry</button>
 		<div id="table-div">
 		</div>
 	</div>
 
 	<div id="detail">
 		<!-- display list -->
-		<button onclick="displayList(this)">show table</button>
-		<button onclick="displayUpdate(this)">update</button>
-		<button onclick="displayDelete(this)">delete</button>
+		<button id="show-table-btn">show table</button>
+		<button id="dispay-update-btn">update</button>
+		<button id="display-delete-btn">delete</button>
 		<div id="content-div">
 		</div>
 	</div>
@@ -43,231 +43,17 @@
 			Welcome to TinyMCE!
 		</textarea>
 
-		<button onclick="post(this)" id="post-btn">post</button>
-		<button onclick="update(this)" id="update-btn">update</button>
-		<button onclick="displayList(this)">go back</button>
+		<button id="post-btn">post</button>
+		<button id="update-btn">update</button>
+		<button id="go-back-btn">go back</button>
 	</div>
 
 	<div id="delete">
 		<p id="confirmation-p">Are you sure to want to delete: </p>
-		<button onclick="del_wr(this)">yes</button>
-		<button onclick="displayList(this)">no</button>
+		<button id="delete-yes-btn">yes</button>
+		<button id="delete-no-btn">no</button>
 	</div>
 </div>
 <script type="text/javascript" src='{% static "js/custom.js" %}'></script>
-<script>
-	let diary_data = [];
-	let filteredData = [];
-	let selected_index = null;
-
-	let post_domain = 'diaries_list_api';
-	let update_domain = 'diary_detail_api';
-	const domain = post_domain;
-
-	const csrftoken = getCookie('csrftoken');
-
-
-	// initialize tiny mce
-	tinymce.init({
-	    selector: '#mytextarea',
-		plugins: 'a11ychecker advcode casechange export formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
-		toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter pageembed permanentpen table',
-		toolbar_mode: 'floating', 
-		tinycomments_mode: 'embedded',
-		tinycomments_author: 'Author name', 
-	});
-
-	// get the data from the server
-	const get_data_wr = async () => {
-		const domain = `{{domain}}?interval=${interval.value}`;
-		const data = await get_data(domain)
-		// set the variable
-		diary_data = data;
-		return data;
-	}
-
-	const update_selected_index = (e) => {
-		// the index of the selected element
-		selected_index = e.srcElement.parentNode.id;
-		displayContent(diary_data[selected_index]);
-
-		// display detail
-		displayDetail();
-	}
-
-	const displayList = () => {
-		listDiv.style.display = "block";
-
-		// hide detail
-		detailDiv.style.display = "none";
-
-		// hide create
-		createUpdateDiv.style.display = "none";
-
-		// hide delete
-		deleteDiv.style.display = 'none';
-	}
-				
-	const displayDetail = () => {
-		detailDiv.style.display = "block";
-
-		// hide list
-		listDiv.style.display = "none";
-	}
-
-	const displayUpdateCreate = () => {
-		createUpdateDiv.style.display = "block";
-
-		// display post btn
-		postBtn.style.display = 'block';
-
-		// hide list
-		listDiv.style.display = 'none';
-
-		// hide update btn
-		updateBtn.style.display = 'none';
-	}
-
-	const displayDelete = () => {
-		deleteDiv.style.display = 'block';
-
-		// display confirmation
-		confirmationP.innerHTML += diary_data[selected_index].title + '?';
-
-		// hide detail
-		detailDiv.style.display = 'none';
-	}
-
-	// update
-	const displayUpdate = () => {
-		displayUpdateCreate();
-		const data = diary_data[selected_index];
-		diaryTitle.value = data['title'];
-		tinymce.get("mytextarea").setContent(data['content']);
-
-		// display update 
-		updateBtn.style.display = 'block';
-
-		// hide post btn
-		postBtn.style.display = 'none';
-
-		// hide detail
-		detailDiv.style.display = 'none';
-	}
-
-	const displayContent = (content) => {
-		contentDiv.innerHTML = "";
-		contentDiv.innerHTML = "<p>" + content["title"] + "<br>" + content["timestamp"] + "</p>";
-		contentDiv.innerHTML += content["content"];
-	}
-
-	// update the table when the interval is changed
-	const updateTableOnIntervalChange = async () => {
-		displayList();
-		// get the data
-		const data = await get_data_wr();
-		createTableWr();
-	}
-
-	// create a table base on fund and category
-	const createTableWr = () => createTable(diary_data, ['title', 'timestamp'], tableDiv, update_selected_index);
-
-	const get_text_area_content = () => {
-		const data = {
-			title: diaryTitle.value,
-			content: tinymce.get("mytextarea").getContent()
-		};
-		return data;
-	}
-
-	const post = async () => {
-		const obj_data = get_text_area_content();
-		const data = await post_update(post_domain, 'POST', obj_data, csrftoken);
-
-		// post processing
-
-		// add the new data to the diary data
-		diary_data.push(data);
-
-		// update the table
-		createTableWr();
-
-		// hide the create
-		createUpdateDiv.style.display = 'none';
-
-		// display the list
-		listDiv.style.display = "block";
-
-		// clear the contents of the title and textbox
-		diaryTitle.value = '';
-		tinymce.get("mytextarea").setContent('');
-	}
-
-	const update = async () => {
-		const obj_data = get_text_area_content();
-		const data = await post_update(`${update_domain}/${diary_data[selected_index].id}`, 'PUT', obj_data, csrftoken);
-
-
-		// replace the updated content
-		diary_data[selected_index] = data;
-
-		// update the table
-		createTableWr();
-
-		// hide the create
-		createUpdateDiv.style.display = 'none';
-
-		// display the list
-		listDiv.style.display = "block";	
-
-		// clear the contents of the title and textbox
-		diaryTitle.value = '';
-		tinymce.get("mytextarea").setContent('');		
-	}
-
-	// delete
-	const del_wr = async () => {
-		const obj_data = get_text_area_content();
-		const response = await del(`${update_domain}/${diary_data[selected_index].id}`, obj_data, csrftoken);
-
-		// delete the item
-		delete diary_data[selected_index];
-
-		// update the table
-		createTableWr();
-
-		// hide delete
-		deleteDiv.style.display = 'none';
-
-		// display list
-		listDiv.style.display = 'block';
-	}
-
-	// diary list conponent
-	const listDiv = document.getElementById("list");
-	const tableDiv = document.getElementById("table-div");
-	const createDiaryBtn = document.getElementById("create-diary-btn");
-	const interval = document.getElementById("interval");
-
-
-
-	// detail
-	const detailDiv = document.getElementById("detail");
-	const contentDiv = document.getElementById("content-div");
-	const showTableBtn = document.getElementById("show-table-btn");
-
-	// create and update
-	const createUpdateDiv = document.getElementById('create-update');
-	let diaryTitle = document.getElementById('id_title');
-	const mytextarea = document.getElementById('mytextarea');
-	const postBtn = document.getElementById('post-btn');
-	const updateBtn = document.getElementById('update-btn');
-
-	// delete
-	const deleteDiv = document.getElementById('delete');
-	const confirmationP = document.getElementById('confirmation-p');
-
-
-	updateTableOnIntervalChange();
-</script>
+<script type="text/javascript" src="{% static 'js/diary.js' %}" defer></script>
 {% endblock %}
