made an error on id

--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -27,7 +27,7 @@
 	<div id="detail">
 		<!-- display list -->
 		<button id="show-table-btn">show table</button>
-		<button id="dispay-update-btn">update</button>
+		<button id="display-update-btn">update</button>
 		<button id="display-delete-btn">delete</button>
 		<div id="content-div">
 		</div>
