added a seach field

--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -9,6 +9,10 @@
 	<script src="https://cdn.tiny.cloud/1/7ycmwc1x5jcxbm0s80s67b2fipepck73uh51jlmwawhneu95/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 
 	<h3>Hard Wood Laminate</h3>
+	<div id="search">
+		<label for="search">Search</label>
+		<input type="text" name="search" id="search-field">
+	</div>
 	<div id="list">
 		<label for="interval">Interval:</label>
 		<select id="interval">
