made some adjustmenets to the search bar

--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -9,11 +9,13 @@
 	<script src="https://cdn.tiny.cloud/1/7ycmwc1x5jcxbm0s80s67b2fipepck73uh51jlmwawhneu95/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 
 	<h3>Hard Wood Laminate</h3>
+	<div id="search-bar">
+		<label for="search">Search</label>
+		<input type="text" name="search" id="search-field">
+	</div>
 	<div id="search">
 	</div>
 	<div id="list">
-		<label for="search">Search</label>
-		<input type="text" name="search" id="search-field">
 		<label for="interval">Interval:</label>
 		<select id="interval">
 			<option value=7>1 Week</option>
