--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -14,6 +14,9 @@
 		<input type="text" name="search" id="search-field">
 	</div>
 	<div id="search">
+		<div id="search-table">
+			
+		</div>
 	</div>
 	<div id="list">
 		<label for="interval">Interval:</label>
