--- a/templates/fund/detail.html
+++ b/templates/fund/detail.html
@@ -35,6 +35,6 @@
 		<a href="{{delete_link}}" class="btn btn-danger">delete</a>
 	{% endif %}
 	<a href="{{fund_allocation_link}}" class="btn btn-dark">fund allocation</a>
-
+	<a href="{{fund_transfer_link}}" class="btn btn-dark">fund transfer</a>
 	<a href="{{go_back_link}}" class="btn btn-info">go back</a>
 {% endblock %}
