fixed the css class issue with my custom css and bootstrap
there is a conflict of class in my custom css and bootsrap(card), its really awkward thats i fixed it immediately

--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -7,10 +7,10 @@
 {% load static %}
 <div class="flex-container container">
 	<div class="item">
-		<div class="card orange">
-			<h2 class="">Expense</h2>
-			<p class="">records and analyze your daily expenditures</p>
-			<a href="{{expense_home_link}}" class="card-link">Go to Expense</a>
+		<div class="my-card orange">
+			<h2>Expense</h2>
+			<p>records and analyze your daily expenditures</p>
+			<a href="{{expense_home_link}}">Go to Expense</a>
 			<div class="image-container">
 				<img src="../media/icons/expense.png">
 			</div>
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="item">
-		<div class="card cyan">
+		<div class="my-card cyan">
 			<h2 class="">Income</h2>
 			<p class="">records and analyze income</p>
 			<a href="{{income_home_link}}" class="card-link">Go to Income</a>
@@ -29,7 +29,7 @@
 	</div>
 
 	<div class="item">
-		<div class="card red">
+		<div class="my-card red">
 			<h2 class="">Diary</h2>
 			<p class="">records what happens in your daily life</p>
 			<a href="{{diary_home_link}}" class="card-link">Go to Diary</a>
@@ -40,7 +40,7 @@
 	</div>
 
 	<div class="item">
-		<div class="card blue">
+		<div class="my-card blue">
 			<h2 class="">Funds</h2>
 			<p class="">allocate and monitor your funds</p>
 			<a href="{{fund_home_link}}" class="card-link">Go to Funds</a>
@@ -51,7 +51,7 @@
 	</div>
 
 	<div class="item">
-		<div class="card">
+		<div class="my-card">
 			<h2 class="">List</h2>
 			<p class="">allows you to take notes</p>
 			<a href="{{list_home_link}}" class="card-link">Go to List</a>
@@ -62,7 +62,7 @@
 	</div>
 
 	<div class="item">
-		<div class="card">
+		<div class="my-card">
 			<h2 class="">Expense Type</h2>
 			<p class="">define expense types</p>
 			<a href="{{expense_type_link}}" class="card-link">Go to Expense Type</a>
@@ -73,7 +73,7 @@
 	</div>
 
 	<div class="item">
-		<div class="card">
+		<div class="my-card">
 			<h2 class="">Income Type</h2>
 			<p class="">define Income types</p>
 			<a href="{{income_type_link}}" class="card-link">Go to Income Type</a>
