--- a/templates/expense_base.html
+++ b/templates/expense_base.html
@@ -7,9 +7,12 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Expenses</h1>
-	{% block content %}
-		content here
-	{% endblock %}
+	<div class="container">
+		<h1>Expenses</h1>
+		{% block content %}
+			
+			content here
+		{% endblock %}
+</div>
 </body>
 </html>
