--- a/templates/income_base.html
+++ b/templates/income_base.html
@@ -8,6 +8,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	{% load static %}
 	<link rel="stylesheet" type="text/css" href='{% static "css/custom_css.css" %}'>
+	<link rel="icon" type="image/png" href='{% static "media/icons/favicon.png" %}'>
 </head>
 <body>
 	<div class="my-container">
