--- a/templates/accounts_base.html
+++ b/templates/accounts_base.html
@@ -7,11 +7,13 @@
 	<!-- CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href='{% static "css/custom_css.css" %}'>
+	{% load static %}
+	<link rel="stylesheet" type="text/css" href='{% static "css/custom_css.css" %}'>
 	<link rel="icon" type="image/png" href='{% static "media/icons/favicon.png" %}'>
 </head>
 <body>
-	<h1>Account</h1>
-	<div class="container">
+	<div class="my-container">
+		<h1>Account</h1>
 		{% block content %}
 			content here
 		{% endblock %}
