--- a/static/css/custom_css.css
+++ b/static/css/custom_css.css
@@ -101,6 +101,10 @@ h2 {
     font-weight: var(--weight3);
 }
 
+.center-text{
+    text-align: center;
+}
+
 /* modal css */
 /* The Modal (background) */
 .modal {
