--- a/templates/fund/fund_transfer_list.html
+++ b/templates/fund/fund_transfer_list.html
@@ -127,12 +127,15 @@
                 updateModalContent(recipient_funds[e.srcElement.parentNode.id])
             }
 
-            let sender_table = createTable(sender_table_data, ['description', 'amount', 'sender_fund', 'timestamp'], sender_row_selection_func, 'table table-striped', ['Description', 'Amount', 'From', 'Date']);
-            let recipient_table = createTable(recipient_table_data, ['description', 'amount', 'recipient_fund', 'timestamp'], recipient_row_selection_func, 'table table-striped', ['Description', 'Amount', 'To', 'Date']);
             $('table-div').innerHTML="";
-            $('table-div').appendChild(sender_table);
-            // $('table-div').append(document.createElement('P'))
-            $('table-div').appendChild(recipient_table);
+            if(sender_table_data.length > 0){
+                let sender_table = createTable(sender_table_data, ['description', 'amount', 'sender_fund', 'timestamp'], sender_row_selection_func, 'table table-striped', ['Description', 'Amount', 'From', 'Date']);
+                $('table-div').appendChild(sender_table);
+            }
+            if(recipient_table_data.length > 0){
+                let recipient_table = createTable(recipient_table_data, ['description', 'amount', 'recipient_fund', 'timestamp'], recipient_row_selection_func, 'table table-striped', ['Description', 'Amount', 'To', 'Date']);
+                $('table-div').appendChild(recipient_table);
+            }
         }
         init_data();
     </script>
